--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ logging.level.org.springframework=INFO
 
 # Maximum time static resources should be cached
 spring.resources.cache.cachecontrol.max-age=12h
+logging.level.org.hibernate.sql=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
