--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,16 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.springframework.samples</groupId>
-  <artifactId>spring-petclinic</artifactId>
-  <version>2.2.0.BUILD-SNAPSHOT</version>
+  <groupId>org.springframework.medicalclinic</groupId>
+  <artifactId>medical-clinic</artifactId>
+  <version>1.0.0</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.2.2.RELEASE</version>
   </parent>
-  <name>petclinic</name>
+  <name>medical-clinic</name>
 
   <properties>
 
