--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,33 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=jdbc:mysql://localhost/petclinic
-spring.datasource.username=petclinic
-spring.datasource.password=petclinic
+spring.datasource.schema=classpath*:db/${database}/schema.sql
+spring.datasource.data=classpath*:db/${database}/data.sql
+spring.datasource.url=jdbc:mysql://localhost:3306/medical-clinic
+spring.datasource.username=root
+spring.datasource.password=Milanmilan1
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
+
+# Web
+spring.thymeleaf.mode=HTML
+
+# JPA
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+
+# Internationalization
+spring.messages.basename=messages/messages
+
+# Actuator / Management
+management.endpoints.web.base-path=/manage
+management.endpoints.web.exposure.include=*
+
+# Logging
+logging.level.org.springframework=INFO
+# logging.level.org.springframework.web=DEBUG
+# logging.level.org.springframework.context.annotation=TRACE
+
+# Maximum time static resources should be cached
+spring.resources.cache.cachecontrol.max-age=12h
+logging.level.org.hibernate.sql=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
