--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 # database init, supports mysql too
-database=hsqldb
-spring.datasource.schema=classpath*:db/${database}/schema.sql
-spring.datasource.data=classpath*:db/${database}/data.sql
+database=mysql
+spring.datasource.schema=classpath*:db/mysql/schema.sql
+spring.datasource.data=classpath*:db/mysql/data.sql
+spring.datasource.url=jdbc:mysql://localhost:3306/medical-clinic
+spring.datasource.username=root
+spring.datasource.password=Milanmilan1
+spring.datasource.initialization-mode=always
 
 # Web
 spring.thymeleaf.mode=HTML
