fixed mysql config

--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -2,9 +2,9 @@
 database=mysql
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
-spring.datasource.url=jdbc:mysql://localhost:3306/medical-clinic
+spring.datasource.url=jdbc:mysql://localhost:3306/medicalClinic
 spring.datasource.username=root
-spring.datasource.password=Milanmilan1
+spring.datasource.password=mirimetani1
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
 
