--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 database=mysql
 spring.datasource.schema=classpath*:db/mysql/schema.sql
 spring.datasource.data=classpath*:db/mysql/data.sql
-spring.datasource.url=jdbc:mysql://localhost:3306/medical-clinic
+spring.datasource.url=jdbc:mysql://localhost:3306/medicalclinic
 spring.datasource.username=root
-spring.datasource.password=Milanmilan1
+spring.datasource.password=mirimetani1
 spring.datasource.initialization-mode=always
 
 # Web
